log/build_2026-04-02_22-48-23/planning/stdout_stderr.log
[  5%] Built target config_reader
[ 14%] Built target mathlibs
[ 20%] Built target global_planner
[ 37%] Built target reference_line
[ 37%] Built target vehicle_info
[ 45%] Built target pnc_map_creator
[ 51%] Built target global_path_server
[ 60%] Built target obs_move_cmd
[ 62%] Built target decision_center
[ 68%] Built target car_move_cmd
[ 71%] Building CXX object src/pnc_map_creator/CMakeFiles/pnc_map_server.dir/pnc_map_server.cpp.o
[ 88%] Built target local_planner
[ 97%] Built target planning_process
/home/lh/planning_with_ROS2_course/src/planning/src/pnc_map_creator/pnc_map_server.cpp: In member function ‘void Planning::PNCMapServer::response_pnc_map_callback(std::shared_ptr<base_msgs::srv::PNCMapService_Request_<std::allocator<void> > >, std::shared_ptr<base_msgs::srv::PNCMapService_Response_<std::allocator<void> > >)’:
/home/lh/planning_with_ROS2_course/src/planning/src/pnc_map_creator/pnc_map_server.cpp:29:65: error: no match for ‘operator=’ (operand types are ‘std::shared_ptr<Planning::PNCMapCreatorBase>’ and ‘std::shared_ptr<Planning::PNCMapCreatorSTurn>’)
   29 |             map_creator_ = std::make_shared<PNCMapCreatorSTurn>();
      |                                                                 ^
In file included from /usr/include/c++/13/memory:80,
                 from /opt/ros/jazzy/include/rclcpp/rclcpp/rclcpp.hpp:169,
                 from /home/lh/planning_with_ROS2_course/src/planning/src/pnc_map_creator/pnc_map_server.h:4,
                 from /home/lh/planning_with_ROS2_course/src/planning/src/pnc_map_creator/pnc_map_server.cpp:1:
/usr/include/c++/13/bits/shared_ptr.h:418:9: note: candidate: ‘template<class _Yp> std::shared_ptr<_Tp>::_Assignable<const std::shared_ptr<_Yp>&> std::shared_ptr<_Tp>::operator=(const std::shared_ptr<_Yp>&) [with _Tp = Planning::PNCMapCreatorBase]’
  418 |         operator=(const shared_ptr<_Yp>& __r) noexcept
      |         ^~~~~~~~
/usr/include/c++/13/bits/shared_ptr.h:418:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/shared_ptr.h: In substitution of ‘template<class _Tp> template<class _Arg> using std::shared_ptr<_Tp>::_Assignable = typename std::enable_if<std::is_assignable<std::__shared_ptr<_Tp>&, _Arg>::value, std::shared_ptr<_Tp>&>::type [with _Arg = const std::shared_ptr<Planning::PNCMapCreatorSTurn>&; _Tp = Planning::PNCMapCreatorBase]’:
/usr/include/c++/13/bits/shared_ptr.h:418:2:   required by substitution of ‘template<class _Yp> std::shared_ptr<Planning::PNCMapCreatorBase>::_Assignable<const std::shared_ptr<_Tp>&> std::shared_ptr<Planning::PNCMapCreatorBase>::operator=(const std::shared_ptr<_Tp>&) [with _Yp = Planning::PNCMapCreatorSTurn]’
/home/lh/planning_with_ROS2_course/src/planning/src/pnc_map_creator/pnc_map_server.cpp:29:65:   required from here
/usr/include/c++/13/bits/shared_ptr.h:183:15: error: no type named ‘type’ in ‘struct std::enable_if<false, std::shared_ptr<Planning::PNCMapCreatorBase>&>’
  183 |         using _Assignable = typename enable_if<
      |               ^~~~~~~~~~~
/usr/include/c++/13/bits/shared_ptr.h:429:9: note: candidate: ‘template<class _Yp> std::shared_ptr<_Tp>::_Assignable<std::auto_ptr<_Up> > std::shared_ptr<_Tp>::operator=(std::auto_ptr<_Up>&&) [with _Tp = Planning::PNCMapCreatorBase]’
  429 |         operator=(auto_ptr<_Yp>&& __r)
      |         ^~~~~~~~
/usr/include/c++/13/bits/shared_ptr.h:429:9: note:   template argument deduction/substitution failed:
/home/lh/planning_with_ROS2_course/src/planning/src/pnc_map_creator/pnc_map_server.cpp:29:65: note:   ‘std::shared_ptr<Planning::PNCMapCreatorSTurn>’ is not derived from ‘std::auto_ptr<_Up>’
   29 |             map_creator_ = std::make_shared<PNCMapCreatorSTurn>();
      |                                                                 ^
/usr/include/c++/13/bits/shared_ptr.h:446:9: note: candidate: ‘template<class _Yp> std::shared_ptr<_Tp>::_Assignable<std::shared_ptr<_Yp> > std::shared_ptr<_Tp>::operator=(std::shared_ptr<_Yp>&&) [with _Tp = Planning::PNCMapCreatorBase]’
  446 |         operator=(shared_ptr<_Yp>&& __r) noexcept
      |         ^~~~~~~~
/usr/include/c++/13/bits/shared_ptr.h:446:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/shared_ptr.h: In substitution of ‘template<class _Tp> template<class _Arg> using std::shared_ptr<_Tp>::_Assignable = typename std::enable_if<std::is_assignable<std::__shared_ptr<_Tp>&, _Arg>::value, std::shared_ptr<_Tp>&>::type [with _Arg = std::shared_ptr<Planning::PNCMapCreatorSTurn>; _Tp = Planning::PNCMapCreatorBase]’:
/usr/include/c++/13/bits/shared_ptr.h:446:2:   required by substitution of ‘template<class _Yp> std::shared_ptr<Planning::PNCMapCreatorBase>::_Assignable<std::shared_ptr<_Tp> > std::shared_ptr<Planning::PNCMapCreatorBase>::operator=(std::shared_ptr<_Tp>&&) [with _Yp = Planning::PNCMapCreatorSTurn]’
/home/lh/planning_with_ROS2_course/src/planning/src/pnc_map_creator/pnc_map_server.cpp:29:65:   required from here
/usr/include/c++/13/bits/shared_ptr.h:183:15: error: no type named ‘type’ in ‘struct std::enable_if<false, std::shared_ptr<Planning::PNCMapCreatorBase>&>’
  183 |         using _Assignable = typename enable_if<
      |               ^~~~~~~~~~~
/usr/include/c++/13/bits/shared_ptr.h:454:9: note: candidate: ‘template<class _Yp, class _Del> std::shared_ptr<_Tp>::_Assignable<std::unique_ptr<_Up, _Ep> > std::shared_ptr<_Tp>::operator=(std::unique_ptr<_Up, _Ep>&&) [with _Del = _Yp; _Tp = Planning::PNCMapCreatorBase]’
  454 |         operator=(unique_ptr<_Yp, _Del>&& __r)
      |         ^~~~~~~~
/usr/include/c++/13/bits/shared_ptr.h:454:9: note:   template argument deduction/substitution failed:
/home/lh/planning_with_ROS2_course/src/planning/src/pnc_map_creator/pnc_map_server.cpp:29:65: note:   ‘std::shared_ptr<Planning::PNCMapCreatorSTurn>’ is not derived from ‘std::unique_ptr<_Tp, _Dp>’
   29 |             map_creator_ = std::make_shared<PNCMapCreatorSTurn>();
      |                                                                 ^
/usr/include/c++/13/bits/shared_ptr.h:414:19: note: candidate: ‘std::shared_ptr<_Tp>& std::shared_ptr<_Tp>::operator=(const std::shared_ptr<_Tp>&) [with _Tp = Planning::PNCMapCreatorBase]’
  414 |       shared_ptr& operator=(const shared_ptr&) noexcept = default;
      |                   ^~~~~~~~
/usr/include/c++/13/bits/shared_ptr.h:414:29: note:   no known conversion for argument 1 from ‘std::shared_ptr<Planning::PNCMapCreatorSTurn>’ to ‘const std::shared_ptr<Planning::PNCMapCreatorBase>&’
  414 |       shared_ptr& operator=(const shared_ptr&) noexcept = default;
      |                             ^~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/shared_ptr.h:438:7: note: candidate: ‘std::shared_ptr<_Tp>& std::shared_ptr<_Tp>::operator=(std::shared_ptr<_Tp>&&) [with _Tp = Planning::PNCMapCreatorBase]’
  438 |       operator=(shared_ptr&& __r) noexcept
      |       ^~~~~~~~
/usr/include/c++/13/bits/shared_ptr.h:438:30: note:   no known conversion for argument 1 from ‘std::shared_ptr<Planning::PNCMapCreatorSTurn>’ to ‘std::shared_ptr<Planning::PNCMapCreatorBase>&&’
  438 |       operator=(shared_ptr&& __r) noexcept
      |                 ~~~~~~~~~~~~~^~~
/home/lh/planning_with_ROS2_course/src/planning/src/pnc_map_creator/pnc_map_server.cpp:21:97: warning: unused parameter ‘responce’ [-Wunused-parameter]
   21 |                                                  const std::shared_ptr<PNCMapService::Response> responce)
      |                                                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
gmake[2]: *** [src/pnc_map_creator/CMakeFiles/pnc_map_server.dir/build.make:76: src/pnc_map_creator/CMakeFiles/pnc_map_server.dir/pnc_map_server.cpp.o] 中断
gmake[1]: *** [CMakeFiles/Makefile2:580: src/pnc_map_creator/CMakeFiles/pnc_map_server.dir/all] 中断
gmake: *** [Makefile:146: all] 中断
